dashboard features added